<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="40dp"

                    android:layout_marginTop="@dimen/_60ssp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/email_adress"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/enter_password"
                    android:textColorHint="@color/black"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/tv_Signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/bg_round"
                    android:fontFamily="@font/sf_pro_display_bold"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="60dp"
                    android:paddingVertical="12dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="60dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_any_account"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_SignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:padding="@dimen/_10ssp"
                        android:textColor="#3236E9"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>